--- a/client/src/app/sandbox/sandbox.component.css
+++ b/client/src/app/sandbox/sandbox.component.css
@@ -84,6 +84,7 @@
     outline: none;
     box-sizing: border-box;
     padding: 10px;
+    background: rgb(230, 230, 230);
 }
 
 /*  text sandbox  */
