--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -9,3 +9,9 @@
   <slide-editor id="slide-editor" class="accent05 flex-col-evenly"></slide-editor>
 
 </div>
+
+<div id="#app-dialog">
+  <div id="#dialog-box">
+    {{}}
+  </div>
+</div>
