Created dialog system.  Works properly.

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -9,9 +9,6 @@
   <slide-editor id="slide-editor" class="accent05 flex-col-evenly"></slide-editor>
 
 </div>
+<app-dialog></app-dialog>
 
-<div id="#app-dialog">
-  <div id="#dialog-box">
-    {{}}
-  </div>
-</div>
+
