--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -52,6 +52,13 @@ button:hover,
     align-items: center;
 }
 
+.flex-row-center {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .flex-row-between {
     display: flex;
     flex-direction: row;
