--- a/client/src/app/styler/styler.component.html
+++ b/client/src/app/styler/styler.component.html
@@ -1,9 +1,10 @@
 
-
-<div class="style-card-container" *ngIf="this.data.viewTextElements && this.data.textStyles.length > 0">
+<div class="style-card-container" *ngIf="this.data.viewTextElements">
   <text-style-card [textStyle]="textStyle" *ngFor="let textStyle of this.data.textStyles"></text-style-card>
 </div>
 
-<div class="style-card-container" *ngIf="this.data.viewImageElements && this.data.imageStyles.length > 0">
+<div class="style-card-container" *ngIf="this.data.viewImageElements">
   <image-style-card [imageStyle]="imageStyle" *ngFor="let imageStyle of this.data.imageStyles"></image-style-card>
 </div>
+
+ 
