--- a/client/src/app/dialog/dialog.component.html
+++ b/client/src/app/dialog/dialog.component.html
@@ -1,5 +1,5 @@
 <div id="overlay" *ngIf="this.dialog.showDialog">
-  <div id="dialog-box" class="grayAccent03">
+  <div id="dialog-box">
     <p id="message">{{this.dialog.message}}</p>
 
     <div class="flex-row-center">
