--- a/client/src/app/image-style-card/image-style-card.component.css
+++ b/client/src/app/image-style-card/image-style-card.component.css
@@ -87,3 +87,15 @@ select {
     border: 1px white solid;
     box-sizing: border-box;
 }
+
+.md-color-selector {
+    width: 100px;
+    height: 10px;
+    border: 1px #D6F9DD solid;
+}
+
+.md-color-selector:hover {
+    cursor: pointer;
+}
+
+
