--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,4 @@
+/* Document Defaults */
 body, html{
     margin: 0;
     padding: 0;
@@ -10,6 +11,7 @@ body, html{
 h1, h2, h3, h4, h5, h6, p {
     margin: 0;
     padding: 0;
+    font-weight: normal;
 }
 
 h1:hover,
@@ -23,21 +25,12 @@ h6:hover,
 }
 
 a:hover, 
-button:hover,
- .clickable:hover {
+button:hover
+{
     cursor: pointer;
 }
 
-/*  Angular draggable/resizable handle */
-.ng-resizable-diagonal {
-    display: none;
-}
-
 /* Alignment Classes */
-.wrap {
-    flex-wrap: wrap;
-}
-
 .flex-row-start {
     display: flex;
     flex-direction: row;
@@ -89,63 +82,38 @@ button:hover,
 
 /* Color Scheme Classes */
 
-.accent01{
-    background: #040303;
-    color: #BEB0A7;
-}
-
-.accent02{
-    background: #3A4E48;
-    color: rgb(235, 216, 205);
-}
-
-.accent03{
-    background: #6A7B76;
-    color: #d8d8d8;
-}
-
-.accent04{
-    background: #8B9D83;
-    color: #040303;
-}
-
+/*  app background color.  layer 0  */
 .accent05{
-    background: #BEB0A7;
+    background: rgb(223, 206, 196);
     color: #3A4E48;
 }
 
+/* toolbar style btns  and style cards*/
 .greenAccent01{
     background: #60695C;
     color: #D6F9DD;
 }
 
+/*  toolbar style btns container */
 .greenAccent02{
     background: rgb(63, 78, 66);
     color: rgb(255, 209, 82)
 }
 
+/* main interface theme */
 .grayAccent01{
     background: rgb(34, 34, 34);
     color: rgb(255, 255, 255)
 }
 
+/*  interface 2 theme */
 .grayAccent02{
     background: rgb(65, 65, 65);
     color: rgb(231, 231, 231)
 }
 
+/* interface 3 theme */
 .grayAccent03{
-    background: rgb(221, 221, 221);
+    background: rgb(255, 255, 255);
     color: rgb(99, 99, 99)
 }
-
-.md-color-selector {
-    width: 100px;
-    height: 10px;
-    border: 1px #D6F9DD solid;
-}
-
-.md-color-selector:hover {
-    cursor: pointer;
-}
-
