--- a/client/src/app/sandbox/sandbox.component.html
+++ b/client/src/app/sandbox/sandbox.component.html
@@ -1,5 +1,5 @@
 <!-- Sandbox toolbar -->
-<div id="sandbox-toolbar" class="grayAccent02 flex-row-evenly">
+<!-- <div id="sandbox-toolbar" class="grayAccent02 flex-row-evenly">
   <a (click)="this.data.setMode('text')" class="flex-row-evenly sandbox-toolbar-btn-group">
     <fa name="font"></fa>
     <p>New text object</p>
@@ -9,12 +9,7 @@
     <fa name="image"></fa>
     <p>New image object</p>
   </a>
-
-  <!-- <a (click)="this.data.setMode('shape')" class="flex-row-evenly sandbox-btn-group">
-    <fa name="shapes"></fa>
-    <p>New shape object</p>
-  </a> -->
-</div>
+</div> -->
 
 <!-- Text sandbox -->
 <div id="text-sandbox" class="grayAccent03" *ngIf="this.data.viewTextElements && this.data.textStyles.length > 0">
@@ -66,7 +61,6 @@
     </div>
   </div>
 </div>
-
 
 <!-- Shape sandbox -->
 <!-- <div id="shape-sandbox" class="grayAccent03" *ngIf="this.data.viewShapeElements && this.data.shapeStyles.length > 0">
