--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,12 +1,20 @@
 <div id="app-container" class="grayAccent01">
 
   <toolbar id="toolbar" class="grayAccent01 flex-row-between"></toolbar>
-
+  <toolbar-secondary id="toolbar-secondary"></toolbar-secondary>
   <styler id="styler" class="accent05 flex-col-start"></styler>
 
   <sandbox id="sandbox" class="accent05"></sandbox>
 
   <slide-editor id="slide-editor" class="accent05 flex-col-evenly"></slide-editor>
+
+  <!-- <div id="toolbar" style="background: red"></div>
+  <div id="styler" style="background: blue"></div>
+  <div id="toolbar-secondary" style="background: green; width: 100%;"></div>
+
+  <div id="sandbox" style="background: black"></div>
+
+  <div id="slide-editor" style="background: pink"></div> -->
 
 </div>
 <app-dialog></app-dialog>
