--- a/client/src/app/slide-editor/slide-editor.component.css
+++ b/client/src/app/slide-editor/slide-editor.component.css
@@ -1,51 +1,15 @@
-#slide-editor-toolbar {
-    width: 100%;
-    height: 6vh;
-    margin: 0;
-    padding: 0;
-}
-
-.slide-editor-toolbar-btn-group {
-    height: 100%;
-    max-width: 150px;
-    padding: 0 15px;
-}
-
-.slide-editor-toolbar-btn-group:hover {
-    background: rgb(100, 100, 100);
-}
-
-.slide-editor-toolbar-btn-group fa {
-    font-size: 2vh;
-    margin: 0;
-    padding: 2px 4px;
-}
-
-.slide-editor-toolbar-btn-group p {
-    text-align: center;
-    font-size: 0.7rem;
-    font-size: 0.9vw;
-    margin: 0 10px;
-    padding: 0;
-    white-space: nowrap;
-}
-
-#slide-number {
-    font-size: 1.5rem;
-    font-size: 1.8vw;
-}
-
 #slide-editor-workspace {
-    width: auto;
+    width: 100%;
     display: grid;
     grid-template-rows: 43vh 43vh;
     margin: 0;
     padding: 0;
-}
+    border-left: 5px red solid;
+} 
 
 #slide-render-area {
     height: 100%;
-    width: 41vw;
+    width: 100%;
     overflow: scroll;
     background: linear-gradient(to bottom right, rgb(16, 16, 17), rgb(53, 53, 53));
 }
