--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -5,7 +5,7 @@
     display: grid;
     grid-gap: 0;
     grid-template-rows: 8vh 6vh 86vh;
-    grid-template-columns: 300px auto 41vw;
+    grid-template-columns: 300px auto 10px auto;
     grid-template-areas:
         "toolbar toolbar toolbar"
         "styler toolbar2 toolbar2"
