--- a/client/src/app/toolbar-secondary/toolbar-secondary.component.html
+++ b/client/src/app/toolbar-secondary/toolbar-secondary.component.html
@@ -28,7 +28,7 @@
     </a>
 
     <div>
-      <h1 style="padding: 10px;" id="slide-number" (click)="this.data.test()">{{this.data.currentSlideIndex+1}}/{{this.data.slides.length}}</h1>
+      <h1 style="padding: 10px;" id="slide-number">{{this.data.currentSlideIndex+1}}/{{this.data.slides.length}}</h1>
     </div>
 
     <a (click)="this.nextSlide()" class="flex-row-evenly slide-editor-toolbar-btn-group">
