--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -6,6 +6,7 @@ body, html{
     overflow: visible;
     user-select: none;
     outline: 0;
+    overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6, p {
