--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -5,7 +5,7 @@
   <styler id="styler" class="accent05 flex-col-start"></styler>
 
   <sandbox id="sandbox" class="accent05"></sandbox>
-
+  <div id="resizer"></div>
   <slide-editor id="slide-editor" class="accent05 flex-col-evenly"></slide-editor>
 
 </div>
