--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -5,11 +5,11 @@
     display: grid;
     grid-gap: 0;
     grid-template-rows: 8vh 6vh 86vh;
-    grid-template-columns: 300px auto 41vw;
+    grid-template-columns: 300px auto 10px auto;
     grid-template-areas:
-        "toolbar toolbar toolbar"
-        "styler toolbar2 toolbar2"
-        "styler sandbox editor"
+        "toolbar toolbar toolbar toolbar"
+        "styler toolbar2 toolbar2 toolbar2"
+        "styler sandbox resizer editor"
 }
 
 #toolbar {
@@ -36,4 +36,11 @@
 
 #slide-editor {
     grid-area: editor;
+}
+
+#resizer {
+    grid-area: resizer;
+    background: red;
+    height: 100%;
+    width: 100%;
 }
